--- a/slides/02-cross-validation-grid-search.html
+++ b/slides/02-cross-validation-grid-search.html
@@ -27,226 +27,10 @@ Columbia University, scikit-learn
 .smaller[https://github.com/amueller/ml-workshop-2-of-4]
 
 ---
-class: center
-
-# More neighbors
-
-![:scale 50%](images/knn_boundary_k1.png)
-
-???
-So this was the predictions as made by one-nearest neighbor.
-But we can also consider more neighbors, for example three. Here is the
-three nearest neighbors for each of the points and the corresponding
-labels.
-We can then make a prediction by considering the majority among these
-three neighbors.
-And as you can see, in this case all the points changed their labels! (I
-was actually quite surprised when I saw that, I just picked some points
-at random).
-Clearly the number of neighbors that we consider matters a lot. But what
-is the right number?
-The is a problem you’ll encounter a lot in machine learning, the
-problem of tuning parameters of the model, also called hyper-parameters,
-which can not be learned directly from the data.
----
-class: center
-
-# More neighbors
-
-![:scale 50%](images/knn_boundary_k3.png)
-
-???
-So this was the predictions as made by one-nearest neighbor.
-But we can also consider more neighbors, for example three. Here is the
-three nearest neighbors for each of the points and the corresponding
-labels.
-We can then make a prediction by considering the majority among these
-three neighbors.
-And as you can see, in this case all the points changed their labels! (I
-was actually quite surprised when I saw that, I just picked some points
-at random).
-Clearly the number of neighbors that we consider matters a lot. But what
-is the right number?
-The is a problem you’ll encounter a lot in machine learning, the
-problem of tuning parameters of the model, also called hyper-parameters,
-which can not be learned directly from the data.
----
-class: center, some-space
-
-# Influence of n_neighbors
-
-![:scale 45%](images/knn_boundary_varying_k.png)
-
-???
-Here’s an overview of how the classification changes if we consider
-different numbers of neighbors.
-You can see as red and blue circles the training data. And the background
-is colored according to which class a datapoint would be assigned to
-for each location.
-For one neighbor, you can see that each point in the training set has
-a little area around it that would be classified according to it’s
-label. This means all the training points would be classified correctly,
-but it leads to a very complex shape of the decision boundary.
-If we increase the number of neighbors, the boundary between red and
-blue simplifies, and with 40 neighbors we mostly end up with a line.
-This also means that now many of the training data points would be
-labeled incorrectly.
----
-class: center, spacious
-
-# Model complexity
-
-![:scale 75%](images/knn_model_complexity.png)
-
-???
-We can look at this in more detail by comparing training and test set
-scores for the different numbers of neighbors.
-Here, I did a random 75%/25% split again. This is a very noisy plot as
-the dataset is very small and I only did a random split, but you can
-see a trend here.
-You can see that for a single neighbor, the training score is 1 so perfect
-accuracy, but the test score is only 70%.  If we increase the number of
-neighbors we consider, the training score goes down, but the test score
-goes up, with an optimum at 19 and 21, but then both go down again.
-
-This is a very typical behavior, that I sketched in a schematic for you.
----
-class: center, spacious
-# Overfitting and Underfitting
-
-![:scale 80%](images/overfitting_underfitting_cartoon_train.png)
-
-???
-here is a cartoon version of how this chart looks in general, though
-it's horizontally flipped to the one with saw for knn.
-This chart has accuracy on the y axis, and the abstract concept of model
-complexity on the x axis.
-If we make our machine learning models more complex, we will get better
-training set accuracy, as the model will be able to capture more of the
-variations in the data.
----
-class: center, spacious
-# Overfitting and Underfitting
-
-![:scale 80%](images/overfitting_underfitting_cartoon_generalization.png)
-
-???
-But if we look at the generalization performance, we get a different
-story. If the model complexity is too low, the model will not be able
-to capture the main trends, and a more complex model means better
-generalization.
-However, if we make the model too complex, generalization performance
-drops again, because we basically learn to memorize the dataset.
-
----
-class: center, spacious
-# Overfitting and Underfitting
-
-![:scale 80%](images/overfitting_underfitting_cartoon_full.png)
-
-???
-If we use too simple a model, this is often called underfitting, while
-if we use to complex a model, this is called overfitting. And somewhere
-in the middle is a sweet spot.
-Most models have some way to tune model complexity, and we’ll see many
-of them in the next couple of weeks.
-So going back to nearest neighbors, what parameters correspond to high
-model complexity and what to low model complexity? high n_neighbors =
-low complexity!
-
 ---
 class: center, middle
 
-![:scale 80%](images/train_test_set_2d_classification.png)
-
-???
-So far we’ve work with a split of the data into a training and a test
-set, build the model on the training set, and evaluated on the test set.
-So now, lets say we want to adjust the parameter n_neigbhbors in k
-neighbors algorithm, how could we do this?
-[split, try out different values of k, choose the best on test set]
-What’s the problem with that?
-- good for choosing k, overly optimistic for getting accuracy!
----
-# Overfitting the validation set
-.smaller[
-```python
-from sklearn.datasets import load_breast_cancer
-from sklearn.preprocessing import scale
-
-data = load_breast_cancer()
-X, y = data.data, data.target
-X = scale(X)
-
-X_trainval, X_test, y_trainval, y_test = train_test_split(X, y)
-X_train, X_val, y_train, y_val = train_test_split(
-    X_trainval, y_trainval)
-
-knn = KNeighborsClassifier(n_neighbors=5).fit(X_train, y_train)
-
-print("Validation: {:.3f}".format(knn.score(X_val, y_val)))
-print("Test: {:.3f}".format(knn.score(X_test, y_test)))
-```
-```
-Validation: 0.972
-Test: 0.965
-```
-]
-???
-So I’ll try to illustrate this concept of overfitting the test
-set. Basically, the idea is that if you try out too many things on the
-test set, you will learn about noise in the test set, and this knowledge
-will not generalize to new data.
-
-So here I give you an example with the breast cancer dataset that’s
-build into scikit-learn.
-I split the data twice, now I have a training, a validation and a
-test set.
-I build a nearest neighbors model on the training set, and apply it to
-the test set and the validation set.
-The results are not the same, but they are pretty close. That they are
-different is a consequence of the small dataset and the noisy data.
----
-# Overfitting the validation set
-
-```python
-val = []
-test = []
-
-for i in range(1000):
-    rng = np.random.RandomState(i)
-    noise = rng.normal(scale=.1, size=X_train.shape)
-    knn = KNeighborsClassifier(n_neighbors=5)
-    knn.fit(X_train + noise, y_train)
-    val.append(knn.score(X_val, y_val))
-    test.append(knn.score(X_test, y_test))
-
-print("Validation: {:.3f}".format(np.max(val)))
-print("Test: {:.3f}".format(test[np.argmax(val)]))
-```
-
-```
-Validation: 1.000
-Test: 0.958
-```
-
-???
-So now let me propose a silly way to tune my classifier.
-I add random noise to my training set for fitting.
-And I repeat that 1000 times, and I check which of these thousand runs
-has the best performance on the validation set. That particular run has
-100% percent accuracy, quite a bit better than before.
-If I would use the same set to estimate how well my model is, I would think
-I created a perfect model and I should write a paper about building much
-better models by using noise.
-
-But if I test the same model on the test set, I get a lower accuracy then
-before: the noise I added was good for the validation set, but not the
-test set.
-The lesson is: If I try something often enough, be it parameters or noise, at some point I'll
-get better performance on the validation set, but that doesn’t mean it will be good for any new data.
-By selecting the best among many you introduce a bias, and the validation
-accuracy is not a good measure of generalization performance any more.
+# Model evaluation and selection
 
 ---
 
@@ -304,6 +88,7 @@ test-set score: 0.951
 ```
 ]
 ???
+FIXME complex code
 Here is an implementation of the three-fold split for selecting the
 number of neighbors.
 For each number of neighbors that we want to try, we build a model on
@@ -413,25 +198,7 @@ and the parameter grid to find the best parameters.
 We use the best parameters and the training set to build a model with
 the best parameters,
 and finally evaluate it on the test set.
----
-# Nested Cross-Validation
 
-- Replace outer split by CV loop
-- Doesn’t yield single model
-(inner loop might have different best parameter settings)
-- Takes a long time, not that useful in practice
-
-???
-We could additionally replace the outer split of the data by
-cross-validation. That would yield what’s known as nested
-cross-validation.
-This is sometimes interesting when comparing different models, but it will
-not actually yield one final model. It will yield one model for each loop
-of the outer fold, which might have different settings of the parameters.
-Also, this takes a really long time to train, by an additional factor
-of 5 or 10, so this is not used very commonly in practice.
-
-But let’s dive into the cross-validation a bit more.
 ---
 class: center, middle
 # Cross-Validation Strategies
@@ -491,10 +258,10 @@ with the default parameters, it will yield exactly the same results.
 class: spacious
 # Repeated KFold and LeaveOneOut
 
-- LeaveOneOut : KFold(n_folds=n_samples)
+- LeaveOneOut : KFold(n_folds=n_samples)<br />
 High variance, takes a long time
 
-- Better: RepeatedKFold.
+- Better: RepeatedKFold.<br />
 Apply KFold or StratifiedKFold multiple times with shuffled data. Reduces
 variance!
 
@@ -507,20 +274,6 @@ and the training sets all have very large overlap, this method has very
 high variance.
 A better way to get a robust estimate is to run 5-fold or 10-fold
 cross-validation multiple times, while shuffling the dataset.
----
-# ShuffleSplit / StratifiedShuffleSplit
-.padding-top[
-![:scale 100%](images/shuffle_split_cv.png)]
-
-???
-Another interesting variant is shuffle split and stratified shuffle
-split. In shuffle split, we repeatedly sample disjoint training and test
-sets randomly.
-You only have to specify the number of iterations, the training set size
-and the test set size. This also allows you to run many iterations with
-reasonably large test-sets.
-It’s also great if you have a very large training set and you want to
-subsample it to get quicker results.
 ---
 # GroupKFold
 
@@ -725,12 +478,6 @@ We can use this for example to plot the results of cross-validation over
 the different parameters.
 Here are the mean training score and mean test score together with one
 standard deviation.
----
-
-class: middle
-
-# Questions ?
-
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
