--- a/slides/03-cross-validation-grid-search.html
+++ b/slides/03-cross-validation-grid-search.html
@@ -478,8 +478,8 @@ the different parameters.
 Here are the mean training score and mean test score together with one
 standard deviation.
     </textarea>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="remark-latest.min.js"></script>
+    <script type="text/javascript" src="MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     <script>
     // Config Remark
@@ -494,20 +494,6 @@ standard deviation.
         ratio: "16:9"
     };
       var slideshow = remark.create(config_remark);
-
-    // Configure MathJax
-    MathJax.Hub.Config({
-    tex2jax: {
-        inlineMath: [['$','$'], ['\\(','\\)']],
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'] /* removed 'code' entry*/
-    }
-    });
-    MathJax.Hub.Queue(function() {
-        var all = MathJax.Hub.getAllJax(), i;
-        for(i = 0; i < all.length; i += 1) {
-            all[i].SourceElement().parentNode.className += ' has-jax';
-        }
-    });
     </script>
   </body>
 </html>
