--- a/slides/06-linear-models-classification.html
+++ b/slides/06-linear-models-classification.html
@@ -424,6 +424,9 @@ But now we need to normalize it so that the sum over all classes is one. So we j
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
+    <script src="remark-latest.min.js"></script>
+    <script type="text/javascript" src="MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
     <script>
     // Config Remark
     remark.macros['scale'] = function (percentage) {
@@ -437,19 +440,6 @@ But now we need to normalize it so that the sum over all classes is one. So we j
         ratio: "16:9"
     };
       var slideshow = remark.create(config_remark);
-    // Configure MathJax
-    MathJax.Hub.Config({
-    tex2jax: {
-        inlineMath: [['$','$'], ['\\(','\\)']],
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'] /* removed 'code' entry*/
-    }
-    });
-    MathJax.Hub.Queue(function() {
-        var all = MathJax.Hub.getAllJax(), i;
-        for(i = 0; i < all.length; i += 1) {
-            all[i].SourceElement().parentNode.className += ' has-jax';
-        }
-    });
     </script>
   </body>
 </html>
